--- a/ischedule/Properties/Resources.resx
+++ b/ischedule/Properties/Resources.resx
@@ -196,4 +196,7 @@
   <data name="lock_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\html\img\lock_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="biology_remove_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\biology_remove_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
