--- a/ischedule/Properties/Resources.resx
+++ b/ischedule/Properties/Resources.resx
@@ -199,4 +199,7 @@
   <data name="biology_remove_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\biology_remove_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="功課表" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\功課表.xls;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
