--- a/ischedule/Properties/Resources.resx
+++ b/ischedule/Properties/Resources.resx
@@ -211,4 +211,7 @@
   <data name="ischedule_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ischedule_logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="功課表template" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\功課表template.doc;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
